--- a/imc/src/App.css
+++ b/imc/src/App.css
@@ -5,17 +5,34 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  background-color: #8ec5fc;
+  background-image: linear-gradient(62deg, #8ec5fc 0%, #e0c3fc 100%);
 }
 
 h1 {
-  font-size: 50px;
+  font-size: 10vmin;
+  text-align: center;
+  background-image: linear-gradient(
+    to right,
+    #000000 0%,
+    #53346d 51%,
+    #000000 100%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
-span {
-  margin: 12px 0;
+h2 {
+  margin-top: 28px;
+  color: #fff;
 }
+
+h3 {
+  padding: 15px;
+}
+
 .area-input {
-  width: 500px;
+  width: 40vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -44,6 +61,59 @@ span {
   font-size: 18px;
 }
 
-h2 {
-  margin-top: 28px;
+#altura,
+#peso {
+  background-image: linear-gradient(
+    to right,
+    #000000 0%,
+    #53346d 51%,
+    #000000 100%
+  );
+}
+
+.buttons {
+  display: flex;
+  width: 70%;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.buttons button {
+  margin: 0 10px;
+}
+
+input:invalid {
+  background-color: rgb(255, 152, 152);
+  color: red;
+}
+
+label {
+  font-size: 1.3rem;
+  font-weight: bold;
+  color: #fff;
+  padding-bottom: 0.5rem;
+}
+
+.btn-grad {
+  background-image: linear-gradient(
+    to right,
+    #000000 0%,
+    #53346d 51%,
+    #000000 100%
+  );
+}
+.btn-grad {
+  text-align: center;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+  display: block;
+}
+
+.btn-grad:hover {
+  background-position: right center; /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
 }
